Fix: Tabbar - Clipping at movingtab #1126

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -6962,6 +6962,10 @@
   #TabsToolbar #tabbrowser-tabs:not([orient="vertical"]) {
     max-height: var(--tab-min-height);
   }
+  #TabsToolbar #tabbrowser-tabs:not([orient="vertical"])[movingtab] {
+    padding-bottom: unset !important;
+    margin-bottom: unset !important;
+  }
   #TabsToolbar[multibar] #tabbrowser-tabs:not([orient="vertical"]) {
     max-height: var(--tab-min-height_mlt);
   }
@@ -21883,6 +21887,10 @@
 @media (-moz-bool-pref: "userChrome.tab.connect_to_window") {
   #TabsToolbar #tabbrowser-tabs:not([orient="vertical"]) {
     max-height: var(--tab-min-height);
+  }
+  #TabsToolbar #tabbrowser-tabs:not([orient="vertical"])[movingtab] {
+    padding-bottom: unset !important;
+    margin-bottom: unset !important;
   }
   #TabsToolbar[multibar] #tabbrowser-tabs:not([orient="vertical"]) {
     max-height: var(--tab-min-height_mlt);
