--- a/src/tab/_connect_to_window.scss
+++ b/src/tab/_connect_to_window.scss
@@ -2,6 +2,10 @@
   #tabbrowser-tabs:not([orient="vertical"]) {
     max-height: var(--tab-min-height);
   }
+  #tabbrowser-tabs:not([orient="vertical"])[movingtab] {
+    padding-bottom: unset !important;
+    margin-bottom: unset !important;
+  }
 
   &[multibar] #tabbrowser-tabs:not([orient="vertical"]) {
     max-height: var(--tab-min-height_mlt);
